# phosphorus31.org

./: .cursorignore  .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  00_AGENT_BIBLE.md  01_OPSEC_RULES.md  AGENT2_COMPLETE_SUMMARY.md  AGENT2_DEPLOY_SUMMARY.md  AGENT2_FINAL_STATUS.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_BUILD_ORDER.md  CURSOR_MASTER_BUILD.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOY_CHECKLIST.md  DEPLOY_NOW.ps1  DEPLOY_PROMPT.md  DEPLOY_QUICK.md  DETAILED_UPDATE.md  KNOWN_FAILURES.md  LAUNCH.md  LEGACY_NAMING_ARCHIVE.md  LICENSE  MASTER_BUILD_PROMPT.md  OPUS_UPDATE_2026-02-17.md  P31.code-workspace  P31_naming_architecture.md  QUANTUM_LEAP_STATUS.md  README.md  SECURITY.md  TEST_CHECKLIST.md  WORKSPACE_STATUS.md  _headers  _redirects  docker-compose.integration.yml  docker-compose.yml  (+14 more)
.github/: FUNDING.yml
GENESIS_GATE_APPS_SCRIPT/: Code.gs  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  Index.html  README.md
SUPER-CENTAUR/: .env.example  .gitignore  12_MONTH_BUDGET_PROJECTION.md  12_MONTH_DEVELOPMENT_ROADMAP.md  60_SECOND_PITCH_SCRIPT.md  ACCESSIBILITY_AUDIT.md  AGENT1_STATUS.md  AGENT1_STRUCTURE_AUDIT.md  AGENT2_COMPILATION_REPORT.md  AGENT3_ROUTES_AUDIT.md  AGENT3_STATUS.md  AGENT4_DATABASE_AUDIT.md  AGENT4_STATUS.md  AGENT5_MODULES_AUDIT.md  AGENT5_STATUS.md  AGENT6_SECURITY_AUDIT.md  AGENT6_STATUS.md  AGENT7_INTEGRATION_TEST_REPORT.md  CENTAUR_MODULE_STATUS.md  CENTAUR_RECON.md  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  COMPREHENSIVE_PROJECT_STATUS.md  DEFENSIVE_PUBLICATION_STRATEGY.md  DETAILED_PROJECT_STATUS.md  DIGITAL_POCKET_GUIDE.md  EXECUTIVE_SUMMARY_COMPASS_ARTIFACT.md  EXECUTIVE_SUMMARY_GOD_DOC.md  EXECUTIVE_SUMMARY_JLS_PACKAGE.md  EXECUTIVE_SUMMARY_QUANTUM_DROP.md  FINAL_GAME_ENGINE_SUMMARY.md  FINAL_QUALITY_ASSURANCE_REPORT.md  FINAL_SYSTEM_STATUS_REPORT.md  FINAL_SYSTEM_SUMMARY.md  FOUNDER_NARRATIVE_ACCELERATOR.md  GAME_ENGINE_GUIDE.md  L.O.V.E._ECONOMY_COMPLETE.md  LAUNCH_CHECKLIST.md  LAUNCH_GAME.bat  LAUNCH_STATUS.md  (+39 more)
_archive/: MANIFEST.md
about/: index.html
accessibility/: index.html
blog/: index.html
cognitive-shield/: DEAD_DEPS.txt  PURGE_REPORT.md  README.md  TSC_STRICT.txt  package.json  tsconfig.app.json
config/: cosmic-theme.ts  credentials.json  design-system.ts  env-reference.md
core/: package.json
cortex/: package.json
deploy/: README.md
docs/: ACCESSIBILITY_AUDIT_LAUNCH05.md  ACCESSIBILITY_SHORTCUTS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ASSET_VERIFICATION_LAUNCH10.md  AUTOMATION_SWARM_SETUP.md  BRANDING_AUDIT_SUMMARY.md  BRANDING_REFINEMENT_SUMMARY.md  BUILD_SESSION_SUMMARY.md  BUILD_STATUS.md  BUILD_SUMMARY.md  CENTAUR_SCOPE_INTEGRATION.md  CENTERPIECE.md  CLAIMS_AUDIT_REPORT.md  CODENAME_SYSTEM.md  CODE_EXAMPLES.md  COMPLETE.md  CONNECTIONS_MAP.md  CONTENT_GENERATION_PROMPT.md  CONVERGENCE_AND_ALIGNMENT.md  (+212 more)
firmware/node-one-esp-idf/components/audio_engine/: CMakeLists.txt  audio_engine.c  idf_component.yml
firmware/node-one-esp-idf/components/audio_engine/include/: audio_engine.h
firmware/node-one-esp-idf/components/display/: CMakeLists.txt  display.c  idf_component.yml
firmware/node-one-esp-idf/components/display/include/: display.h
firmware/node-one-esp-idf/components/lora_radio/: CMakeLists.txt  README.md  idf_component.yml  lora_radio.cpp
firmware/node-one-esp-idf/components/lora_radio/include/: lora_radio.h
firmware/node-one-esp-idf/components/shield_server/: ABDICATION_CHECKLIST.md  ABDICATION_READY.md  ASSISTANCE_SUMMARY.md  BATTLE_TEST_REPORT.md  CMakeLists.txt  P31_NAMING_COMPLIANCE.md  README.md  STRESS_TEST_REPORT.md  shield_server.c
firmware/node-one-esp-idf/components/shield_server/include/: shield_server.h
firmware/node-one-esp-idf/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lora_driver.cpp  lora_driver.h  main.cpp  mcp23017_driver.cpp  mcp23017_driver.h  mesh_protocol.cpp  mesh_protocol.h  node_one_config.h  pin_config.cpp  pin_config.h  pin_map.h  rotary_encoder.cpp  rotary_encoder.h
firmware/node-one-esp-idf/test/: CMakeLists.txt  README.md  RUN_MOCK_TESTS.md  lora_radio_test.c  mock_hardware.c  mock_hardware.h  run_tests.ps1  test_audio.c  test_bsp.c  test_buttons.c  test_display.c  test_lora.c  test_runner.c  test_runner.py
geodesic-engine/: Cargo.toml
geodesic-engine/src/: lib.rs
(+2589 files in other folders)
