[package]
name = "geodesic-engine"
version = "0.1.0"
edition = "2021"
description = "P31 geodesic structure analysis — WASM + Node"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
nalgebra = "0.32"
[features]
default = []
